--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <!-- <script defer type="text/javascript"
     src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=false&key=AIzaSyB1fByA0ZCLSYpzyNAlcVJTwIEUNDYuaIE&callback=initMap">
 </script> -->
-    <title>🌤 WhatsYourTemp</title>
+    <title>Golf Courses Map</title>
   </head>
   <body>
     <noscript>This is noscript</noscript>
