made comp Search Locate Pin

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
       rel="stylesheet"
     />
 
-    <!-- <script defer type="text/javascript"
+    <script type="text/javascript"
     src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=false&key=AIzaSyB1fByA0ZCLSYpzyNAlcVJTwIEUNDYuaIE&callback=initMap">
-</script> -->
+</script>
     <title>Golf Courses Map</title>
   </head>
   <body>
