--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,9 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
 
-    <!-- <script type="text/javascript"
-    src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=false&key=AIzaSyB1fByA0ZCLSYpzyNAlcVJTwIEUNDYuaIE&callback=initMap">
-</script> -->
+
     <title>Golf Courses Map</title>
   </head>
   <body>
@@ -27,3 +24,4 @@
     <div id="root"></div>
   </body>
 </html>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1fByA0ZCLSYpzyNAlcVJTwIEUNDYuaIE&libraries=places"></script> -->
